--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+
+    <div class="container my-5 mx-auto">
+      <h1 class="text-muted text-center my-4">Weather</h1>
+
+    </div>
+
    
     
-    <script src="" async defer></script>
+    <script src="scripts/forecast.js"></script>
+    <script src="scripts/app.js"></script>
   </body>
 </html
