--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
       </form>
 
       <div class="card shadow-lg rounded">
-        <img src="https://via.placeholder.com/400x300" class="time">
+        <img src="https://via.placeholder.com/400x300" class="time card-img-top">
+        <div class="icon bg-light mx-auto text-center">
+         <!-- icon here -->
+        </div>
       </div>
 
     </div>
