--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
          <!-- icon here -->
         </div>
       </div>
+      <div class="text-muted text-uppdercase text-center details">
+        <h5 class="my-3">City name</h5>
+      </div>
 
     </div>
 
