--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       </div>
       <div class="text-muted text-uppdercase text-center details">
         <h5 class="my-3">City name</h5>
+        <div class="my-3">Weather condition</div>
       </div>
 
     </div>
