added div with span tags for temperature

--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
         </div>
       </div>
       <div class="text-muted text-uppdercase text-center details">
-        <h5 class="my-3">City name</h5>
-        <div class="my-3">Weather condition</div>
+        <h5 class="my-3">CITY NAME</h5>
+        <div class="my-3">WEATHER CONDITION</div>
+        <div class="display-4 my-4">
+          <span>TEMP</span>
+          <span>&deg;C</span>
+        </div>
       </div>
 
     </div>
