--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
           
         </div> 
-    
+    <script src="scripts/dotenv.js"></script>
     <script src="scripts/forecast.js"></script>
     <script src="scripts/app.js"></script>
   </body>
